--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,200&display=swap" rel="stylesheet">    
     <title>Landing Page</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
         <div>
             <h4>Header Logo</h4>
         </div>
-        <ul>
+        <ul class="ul__container">
             <li>
                 <a href="#">header link one</a>
             </li>
@@ -24,8 +27,8 @@
             </li>
         </ul>
     </nav>
-    <header>
-        <div>
+    <header class="header__container">
+        <div class="header__div">
             <h1>
                 This website is awesome
             </h1>
@@ -35,36 +38,52 @@
             <input type="button" value="Sign up">
         </div>
         <div>
-            <img src="" alt="">
+            <img src="img/img.jpg" alt="">
         </div>
     </header>
-    <main>
-        <div>
+    <div>
+        <div class="h2__container">
             <h2>Some random information.</h2>
         </div>
-        <div>
-            <div class="item1"></div>
-            <div class="item1"></div>
-            <div class="item1"></div>
-            <div class="item1"></div>
+        <div class="div__container">
+            <div class="item item1">
+                <div class="sub__item"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item item2">
+                <div class="sub__item"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item item3">
+                <div class="sub__item"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item item4">
+                <div class="sub__item"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
-        <div>
-            <p>
+        
+        <div class="divGray__container">
+            <p class="p1">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla ducimus aspernatur vel! Rerum voluptate voluptatem cumque vel doloribus, delectus in dolore qui itaque tenetur. Doloribus laborum obcaecati voluptas repellendus quidem!
             </p>
-            <p>-Thor, God of thunder</p>
+            <p class="p2">-Thor, God of thunder</p>
         </div>
-        <div>
-            <div>
-                <h4>Call to action! it's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="blue__container">
+            <div class="class__to__action__container">
+                <div>
+                    <h4>Call to action! it's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div>
+                    <input type="button" value="Sign up">
+                </div>    
             </div>
-            <div>
-                <input type="button" value="Sign up">
-            </div>
+            
         </div>
-    </main>
-    <footer>
+    </div>
+    <footer class="footer__container">
         <p>Copyright @ The Odin Project 2021</p>
     </footer>
 </body>
