--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,200&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,200&display=swap" rel="stylesheet">
+    <script defer src="main.js"></script>
     <title>Landing Page</title>
 </head>
 <body>
@@ -86,5 +87,7 @@
     <footer class="footer__container">
         <p>Copyright @ The Odin Project 2021</p>
     </footer>
+
+    
 </body>
 </html>
