--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </div>
     <footer class="footer__container">
         <p>Copyright @ The Odin Project 2021</p>
+        <p>Copyright @ The Odin Project 2021</p>
     </footer>
 
     
